--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         }
         
         footer p {
-            margin: auto;
+            padding: 37px;
             /* border: 3px solid green; */
         }
     </style>
@@ -169,7 +169,28 @@
 
     <div class="container">
         <h1 class="italic">&nbsp;&nbsp;comfort <br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; guaranteed</h1>
-        <img src="https://cdn.britannica.com/41/123141-050-E6229449/Air-New-Zealand-Boeing-747-400.jpg" class="w-100 image1" alt="">
+        <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active" data-bs-interval="5000">
+                    <img src="./img/1.jpg" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item" data-bs-interval="5000">
+                    <img src="./img/2.jpg" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="./img/3.jpg" class="d-block w-100" alt="...">
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+
         <div class="btn-group dropend button ms-5">
             <button type="button" class="btn btn-danger italic">
               order tickets online
