--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
             <div class="container d-flex flex-column text-center">
                 <div>
                     <a class="navbar-brand ms-5" href="#">
-                        <img class="img-fluid" src="https://www.webjet.com.au/wj-assets/images/webjet-flights-logo.png" alt="" width="30" height="24">
+                        <img class="img-fluid" src="./img/1.png" alt="" width="30" height="24">
                     </a>
                 </div>
                 <div class="d-flex flex-column gap-1">
