--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         <nav class="navbar nav1">
             <div class="container d-flex flex-column text-center">
                 <div>
-                    <a class="navbar-brand ms-5" href="#">
+                    <a class="navbar-brand" href="#">
                         <img class="img-fluid" src="./img/1.png" alt="" width="30" height="24">
                     </a>
                 </div>
