--- a/index.html
+++ b/index.html
@@ -115,6 +115,9 @@
         }
         
         @media only screen and (max-width:992px) {
+            .img-fluid {
+                width: 60%;
+            }
             .main-content {
                 display: flex;
                 flex-direction: column;
