--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                     </a>
                 </div>
                 <div class="d-flex flex-column gap-1">
-                    <div class="d-flex flex-row gap-3 nav3 mt-3 fs-3">
+                    <div class="d-flex flex-row gap-3 nav3 mt-3 fs-3 mb-3">
                         <a href=""><i class="fa-solid fa-house pe-3"></i></a>
                         <a href=""><i class="fa-solid fa-envelope pe-3"></i></a>
                         <a href=""><i class="fa-solid fa-ellipsis pe-3"></i></a>
