--- a/index.html
+++ b/index.html
@@ -115,6 +115,9 @@
         }
         
         @media only screen and (max-width:992px) {
+            .container {
+                padding: 0;
+            }
             .img-fluid {
                 width: 100%;
             }
